[gui-test] introduce GuiTestOptions; CommandLineProjectTest fix
Introducing GuiTestOptions to specify VM options (such as config and system paths, debug enabling etc) to start IDEA with.

Fix CommandLineProjectTest code example; add tabs converting.